feat(sdk): unify Python clients and interaction contracts
Vis-Session: 42e4fd9e-2069-4320-9a27-c97fe143d06a